laborations/lab1/test/bad/bad035.cc
int foo() {
	for (int i = 0; true; return 2) { }
	return x;
}
